--- a/ip.html
+++ b/ip.html
@@ -139,7 +139,7 @@
         </section>
         <nav class="contact">
             <ul>
-            <li><a href="https://billcypher.netlify.app" class="button">Consultar</a></li>
+            <li><a href="consultas.html" class="button">Consultar</a></li>
             </ul>
 
         </nav>
