--- a/ip.html
+++ b/ip.html
@@ -145,16 +145,16 @@
         </nav>
         <section class="services">
             <div class="service">
-                <h2>Desarrollo Web</h2>
-                <p>Desarrollamos sitios web modernos y funcionales adaptados a tus necesidades.</p>
+                <h2>Data Cypher</h2>
+                <p>.</p>
             </div>
             <div class="service">
-                <h2>Diseño Gráfico</h2>
-                <p>Diseños creativos y profesionales para mejorar la imagen de tu marca.</p>
+                <h2>Data Cypher</h2>
+                <p>.</p>
             </div>
             <div class="service">
-                <h2>Marketing Digital</h2>
-                <p>Estrategias de marketing para aumentar tu presencia en línea y atraer más clientes.</p>
+                <h2>Data Cypher</h2>
+                <p>.</p>
             </div>
         </section>
         <div class="contact">
